[package]
name = "aiken-js-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiken-lang = { version = "1.0.14-alpha" }
uplc = { version = "1.0.14-alpha" }
wasm-bindgen = "0.2.92"
indexmap = "1.9.2"
getrandom = { version = "0.2.12", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
miette = "5.8.0"

[lib]
crate-type = ["cdylib"]  # Compile as a dynamic library for WebAssembly
